# 20240224
- Modified Continuous AutoKick module to do the oneshot kick.
- Check whether the message comes from bot account

# 20240225
- Display the members to be kicked
- Do not check the members with ignored roles
- Bug fixes
    - Add channel permission check
    - Logic to determine the members to be kicked
    - Check instance Logic
    - Bypass the channel permission failure
    - Use message instead of context to avoid context token expire
- Use paginator to overcome the page limit
- Check whether the member has the ignored roles in the setup command
- Improved show kick command
- Monitor system setup process
- Monitor message process

# 20240226
- Fix in case message is None
- Bug fixes